--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
   },
   "scripts": {
