--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.6.0",
-    "sequelize": "^6.32.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,6 +31,6 @@
   "homepage": "https://github.com/Sameh-Sany/books_store#readme",
   "devDependencies": {
     "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.1"
+    "prisma": "^5.2.0"
   }
 }
